[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-market"
version = "1.0.0"
description = "A Python application for fetching and tracking stock market information using yfinance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Stock Market Developer", email = "developer@example.com"}
]
keywords = ["stock", "market", "finance", "yfinance", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "yfinance>=0.2.32",
    "pandas>=2.1.1",
    "numpy>=1.24.3",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipython>=8.15.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/xiangli5176/stock_market"
Repository = "https://github.com/xiangli5176/stock_market.git"
Issues = "https://github.com/xiangli5176/stock_market/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]

